Fix another typo

--- a/content/posts/extending-gatsby-plugins.mdx
+++ b/content/posts/extending-gatsby-plugins.mdx
@@ -96,7 +96,7 @@ const { onPostBuild } = require('gatsby-plugin-meta-redirect/gatsby-node')
 
 // ...
 
-export.onPostBuild = onPostBuild
+exports.onPostBuild = onPostBuild
 ```
 
 Now, `redirects.json` is read in and static, HTML redirects are created
