--- a/content/posts/peer-deps.mdx
+++ b/content/posts/peer-deps.mdx
@@ -92,7 +92,7 @@ they could be unsurprisingly deterred.
 yarn add gatsby-plugin-mdx @mdx-js/mdx @mdx-js/react
 ```
 
-What if we simplified it (I plan on doing exactly this in MDX v2)?:
+What if we simplified it? (I plan on doing exactly this in MDX v2)
 
 ```sh
 yarn add mdx gatsby-plugin-mdx
