Add friction post to writing index

--- a/src/pages/writing.mdx
+++ b/src/pages/writing.mdx
@@ -13,6 +13,7 @@ usually it's technical or even theoretical.
 - [Guessable](/guessable)
 - [Authorable format](/authorable-format)
 - [Innovation at the boundaries](/innovation-at-the-boundaries)
+- [Friction](/friction)
 - [Build for you](/build-for-you)
 - [Stability](/stability)
 - [Organizing posts](/organizing-posts)
