--- a/src/pages/writing.mdx
+++ b/src/pages/writing.mdx
@@ -8,7 +8,7 @@ usually it's technical or even theoretical.
 
 - [JSX as a design tool data structure](/jsx-as-a-design-tool-data-structure)
 - [Styling themes](/styling-themes)
-- [Documenting components with Cartesian products](/cartesian-product)
+- [Components, props, and Cartesian products](/cartesian-product)
 - [Presentational context](/presentational-context)
 - [Latent shadowing](/latent-component-shadowing)
 - [Guessable](/guessable)
