--- a/src/pages/writing.mdx
+++ b/src/pages/writing.mdx
@@ -22,6 +22,7 @@ usually it's technical or even theoretical.
 
 ## Technical
 
+- [Introduction to natural language ASTs](/introduction-to-natural-language-asts)
 - [unified handbook - Primer on the unified ecosystem, ASTs, and compilers](https://github.com/unifiedjs/handbook)
 - [Add a prop to JSX elements with Babel](/add-a-prop-to-jsx-elements-with-babel)
 - [Appending and prepending to JavaScript files with Babel](/appending-and-prepending-with-babel)
