Add link to gold's related post

--- a/content/posts/cartesian.mdx
+++ b/content/posts/cartesian.mdx
@@ -204,4 +204,5 @@ variation from all possibilities when working inside a design or development too
 
 - [Cartesian component this writeup is based on](https://github.com/c8r/kit#cartesian)
 - [Component Styling API by Adam Morse](http://mrmrs.cc/writing/component-styling-api/)
+- [Declarative Design Tools by Jon Gold](https://jon.gold/2016/06/declarative-design-tools/)
 - [Wikipedia](https://en.wikipedia.org/wiki/Cartesian_product)
