Add bezold effect to writing index

--- a/src/pages/writing.mdx
+++ b/src/pages/writing.mdx
@@ -11,6 +11,7 @@ usually it's technical or even theoretical.
 - [Components, props, and Cartesian products](/cartesian-product)
 - [Presentational context](/presentational-context)
 - [Latent shadowing](/latent-component-shadowing)
+- [The Bezold Effect](/bezold-effect)
 - [Guessable](/guessable)
 - [Authorable format](/authorable-format)
 - [Innovation at the boundaries](/innovation-at-the-boundaries)
