--- a/src/pages/writing.mdx
+++ b/src/pages/writing.mdx
@@ -8,6 +8,7 @@ usually it's technical or even theoretical.
 
 - [JSX as a design tool data structure](/jsx-as-a-design-tool-data-structure)
 - [Styling themes](/styling-themes)
+- [Randomness and color](/randomness-and-color)
 - [Components, props, and Cartesian products](/cartesian-product)
 - [Presentational context](/presentational-context)
 - [Latent shadowing](/latent-component-shadowing)
