Tweak some wording, add webring, add series comparison

--- a/content/posts/blogchains.mdx
+++ b/content/posts/blogchains.mdx
@@ -14,12 +14,14 @@ This experiment of his was derived from Venkatesh Rao's post
 _[Constructions in magical thinking](https://www.ribbonfarm.com/2019/03/21/constructions-in-magical-thinking/)_.
 
 The idea is that "megaposts" are broken into smaller, fixed length
-posts that are linked together.
+posts that are linked together. They're informally developed or
+improvised over time rather than something outlined from the
+beginning.
 
 ## Goodbye _megapost_
 
 As a digital gardener over the last year or so I've definitely seen
-where this can be valuable. I've definitely found that "megaposts" can
+where this can be valuable. I've found that "megaposts" can
 easily become a time sink when they grow and grow. Over time they become
 rather daunting to pick up and can linger around for weeks before you
 press that publish button.
@@ -33,7 +35,7 @@ I thought Venkatesh's anaerobic vs aerobic comparison was pretty apt.
 > The bigger difference between classic and blogchain longforms is that the
 > former is what I think of as anaerobic, like strength training, while the latter
 > is aerobic, like distance running. Blogchains breathe in the evolving context at
-> a rate comparable to their internal evolution rate. There is no lactic acid build-up.
+> a rate comparable to their internal evolution rate.
 >
 > &mdash; Venkatesh Rao in [Semi-Annual 2019 Roundup](https://www.ribbonfarm.com/2019/07/04/semi-annual-2019-roundup/)
 
@@ -42,6 +44,10 @@ I thought Venkatesh's anaerobic vs aerobic comparison was pretty apt.
 When it comes to writing consistently over a long period of time, I like
 the idea of aerobic style content production. It's inherently more flexible
 and allows ideas our topics to develop more fluidly.
+
+As Chris Biscardi says, "runners have to manage their limits", which is something
+the blogchain seems to bake in. It's not a push to the finish in one fell swoop.
+We're evolving to something more cohesive and finished.
 
 I think the blogchain and bite-sized post concept lends itself better to the
 digital garden.
@@ -72,6 +78,14 @@ a river you want to follow along for a while. You'll start heading towards
 the mountain again, but your perspective might be different.
 
 There might be rad shit along the river, too. Waterfalls are cool.
+
+### Departing from the blog series
+
+The blog series has been around for a long time, but I think the blogchain
+itself is a departure. My mental model for the blog series is something that's
+planned out and outlined well in advance and you work to complete each part.
+
+The blogchain is freeform and exploratory.
 
 ## Can I chain to your blogchain?
 
@@ -119,6 +133,8 @@ blogchains? How can you curate them?
 
 I don't have an answer or even an idea aside from manually cut and
 pasting links. But, not everyone's content is just a GitHub PR away.
+
+Josh Comeau might [be onto something regarding webrings](https://twitter.com/JoshWComeau/status/1168623705347543051).
 
 ## Conclusion
 
