Improve title of building blogchains link

--- a/content/posts/blogchains.mdx
+++ b/content/posts/blogchains.mdx
@@ -9,7 +9,7 @@ tags:
 ---
 
 I first heard about the concept of a blogchain from Tom Chritchlow's post
-_[New Blogging 1 - Building Blogchains](https://tomcritchlow.com/2019/07/17/blogchains/)_.
+_[Building Blogchains](https://tomcritchlow.com/2019/07/17/blogchains/)_.
 This experiment of his was derived from Venkatesh Rao's post
 _[Constructions in magical thinking](https://www.ribbonfarm.com/2019/03/21/constructions-in-magical-thinking/)_.
 
